# yaml-proxy-editor

./: .gitignore  AGENTS.md  README.ja.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: CODEOWNERS
artifacts/: verify_batch_subscription_export.py  verify_editor_lazy_load.py  verify_sidebar_index_compact.py  verify_website_rule_ui.py
docs/: ARCHITECTURE.md  BUILD.md  NETWORK_POLICY.md  OFFLINE_SECURITY.md  OPEN_SOURCE_AUDIT.md  QUICKSTART.md  RELEASE_USAGE.md  TESTING.md
examples/: openclash-basic.yaml
release/: YAML-Proxy-Editor-0.1.0-x64-zh-CN.msi  YAML-Proxy-Editor-0.2.0-x64-zh-CN.msi
src/: App.tsx  sampleConfig.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: audit_commands.rs  backup_commands.rs  file_commands.rs  mod.rs  speedtest_commands.rs  subscription_commands.rs  yaml_commands.rs
src-tauri/src/core/: backup.rs  file_guard.rs  mod.rs
src-tauri/src/core/audit/: mod.rs
src-tauri/src/core/clash/: mod.rs
src-tauri/src/core/diff/: mod.rs
src-tauri/src/core/dns/: mod.rs
src-tauri/src/core/node/: mod.rs
src-tauri/src/core/rule/: mod.rs
src-tauri/src/core/subscription/: mod.rs
src-tauri/src/core/yaml/: mod.rs
tests/: backupPolicy.test.ts  batchSubscription.test.ts  buildConfig.test.ts  clashService.test.ts  configOptimizer.test.ts  creatorInfo.test.ts  desktopBridge.test.ts  diffPreview.test.ts  documentTabs.test.ts  fileDrop.test.ts  (+16 more)
(+38 files in other folders)
